[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_egui = "0.38.0"
rfd = "0.16.0"

[dev-dependencies]

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day01_viz"
path = "src/bin/day01_viz.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

